src/objects/Idea__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Idea</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>